fix(plugins/plugin-client-common): hover effect for block action buttons has low contrast
part of #7954

--- a/plugins/plugin-client-common/web/scss/components/Terminal/Block.scss
+++ b/plugins/plugin-client-common/web/scss/components/Terminal/Block.scss
@@ -204,7 +204,8 @@
     }
 
     .kui--block-action:hover {
-      background-color: var(--color-table-border1);
+      background-color: var(--color-table-border2);
+      mix-blend-mode: difference;
     }
 
     .repl-input,
